--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -4,4 +4,178 @@
 
 @include mediaMd {}
 
-@include mediaSm {}
+@include mediaSm {
+    .headerImage {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        h1 {
+            padding-top: 15rem;
+            margin: 0 0 3rem 0;
+            text-align: center;
+            float: none;
+            font-size: 48px;
+        }
+
+        a[type="button"] {
+            position: relative;
+            padding: 23px 35px;
+            z-index: 0;
+            float: none;
+            font-style: normal;
+            font-weight: normal;
+            line-height: normal;
+            font-size: 26px;
+            text-align: center;
+            letter-spacing: 0.1em;
+            color: #AEE1F7;
+            text-decoration: none;
+            margin: 0 0 0 0;
+            border-radius: 35px;
+
+            .icon {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                height: 100%;
+                width: 100%;
+                z-index: -1;
+
+
+                path {
+                    transition: opacity 0.4s ease;
+
+                    &:first-of-type {
+                        fill: transparent;
+                        stroke: url(#linearGradient-1);
+                        stroke-width: 3;
+                        opacity: 1;
+                    }
+
+                    &.icon--plain {
+                        opacity: 0;
+                        stroke: none;
+                        stroke-width: 0;
+                    }
+                }
+            }
+
+            &:hover {
+                path {
+                    &:first-of-type {
+                        opacity: 0;
+                    }
+
+                    &.icon--plain {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+
+    }
+
+    footer {
+        display: block;
+
+        .footerContainer {
+            width: 80%;
+            margin: 1.5rem auto;
+            text-align: center;
+            justify-content: center;
+            color: #FFFFFF;
+
+            .footerTop {
+                display: block;
+
+                a {
+                    color: #FFFFFF;
+                }
+
+                img {
+                    margin-top: 2.5rem;
+                    margin-right: 1rem;
+                }
+
+                .text {
+                    margin-top: 2.5rem;
+                    text-align: left;
+                }
+            }
+
+            .supportOptions {
+                display: grid;
+                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+                grid-gap: 20px;
+                margin: 1rem auto;
+
+                hr {
+                    width: 90%;
+                }
+            }
+        }
+
+    }
+
+    body#Услуги {
+
+        .headerImage {
+            background-image: linear-gradient(rgba(44, 94, 142, 0.01), rgba(44, 94, 142, 0.3)), url("../img/Услуги_header_background.png");
+            display: block;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+
+            .headerImageInner {
+                display: block;
+                float: right;
+                justify-content: center;
+                align-items: center;
+                text-align: right;
+                padding: 0 auto;
+            }
+
+            h1 {
+                margin: 0 5px 0 0;
+                background-image: none;
+                -webkit-background-clip: none;
+                -webkit-text-fill-color: #333333;
+                color: #333333;
+                text-align: right;
+                font-size: 42px;
+
+                b {
+                    font-size: 48px;
+                }
+            }
+
+            button.btn {
+                float: right;
+                border: none;
+                display: block;
+                padding: 34px 68px;
+                font-style: normal;
+                font-weight: normal;
+                line-height: normal;
+                font-size: 22px;
+                text-align: center;
+                letter-spacing: 0.1em;
+                color: #ffffff;
+                text-decoration: none;
+                background: #2C5E8E;
+                border-radius: 50px;
+                -webkit-border-radius: 50px;
+                -moz-border-radius: 50px;
+                -ms-border-radius: 50px;
+                -o-border-radius: 50px;
+                margin: 0 18px 0 0;
+                margin-top: .5rem;
+                justify-self: center;
+            }
+
+
+        }
+    }
+}
