--- a/css/style.css
+++ b/css/style.css
@@ -580,13 +580,13 @@ body#Услуги main section.one .threeCards .card button {
 body#Услуги section.two h2 {
   font-size: 41px; }
 
-body#Услуги section.two .cards .cardWithImages button {
+body#Услуги section.three h2 {
+  font-size: 41px; }
+
+body#Услуги section.three .cards .cardWithImages button {
   position: relative;
   margin: 10px auto;
   padding: 14px 28px; }
-
-body#Услуги section.three h2 {
-  font-size: 41px; }
 
 body#Услуги footer {
   background: none;
@@ -603,6 +603,14 @@ body#Услуги footer {
   margin: 60px 0 0 0; }
 
 @media screen and (max-width: 500px) {
+  h1 {
+    font-size: 20px; }
+  h2 {
+    font-size: 18px; }
+  h3 {
+    font-size: 16px; }
+  h4 {
+    font-size: 14px; }
   .headerImage {
     display: block;
     justify-content: center;
@@ -651,6 +659,12 @@ body#Услуги footer {
         opacity: 0; }
       .headerImage a[type="button"]:hover path.icon--plain {
         opacity: 1; }
+  main section.one h2 {
+    font-size: 28px; }
+  section.two h2 {
+    font-size: 28px; }
+  section.three h2 {
+    font-size: 28px; }
   footer {
     display: block; }
     footer .footerContainer {
@@ -690,24 +704,23 @@ body#Услуги footer {
       text-align: right;
       padding: 0 auto; }
     body#Услуги .headerImage h1 {
-      margin: 0 5px 0 0;
+      margin: 0 14px 0 0;
+      padding: 5rem 0 0 0;
       background-image: none;
       -webkit-background-clip: none;
-      -webkit-text-fill-color: #333333;
-      color: #333333;
-      text-align: right;
-      font-size: 42px; }
+      -webkit-text-fill-color: #000000;
+      color: #000000;
+      text-align: right; }
       body#Услуги .headerImage h1 b {
-        font-size: 48px; }
+        font-size: 42px; }
     body#Услуги .headerImage button.btn {
       float: right;
       border: none;
       display: block;
-      padding: 34px 68px;
+      padding: 24px 34px;
       font-style: normal;
       font-weight: normal;
       line-height: normal;
-      font-size: 22px;
       text-align: center;
       letter-spacing: 0.1em;
       color: #ffffff;
@@ -720,4 +733,10 @@ body#Услуги footer {
       -o-border-radius: 50px;
       margin: 0 18px 0 0;
       margin-top: .5rem;
-      justify-self: center; } }
+      justify-self: center; }
+  body#Услуги main section.one h2 {
+    font-size: 28px; }
+  body#Услуги section.two h2 {
+    font-size: 28px; }
+  body#Услуги section.three h2 {
+    font-size: 28px; } }
