working on hamburger menu

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,12 +4,12 @@
 
 $backgroudColor: #F5F5F5;
 $primary-color: #444;
-$secondary-color: #00a2ff;
+$secondary-color: #333;
 $mainFont: 'Inter UI',
 'Roboto',
 sans-serif;
 $fontColor: rgb(255, 255, 255);
-$lightColor: #f4f4f4;
+$lightColor: #ffffff;
 $darkColor: #333;
 
 @mixin easeOut {
