--- a/css/style.css
+++ b/css/style.css
@@ -2,102 +2,6 @@
 @import url("https://rsms.me/inter/inter.css");
 @import url("typeface-inter");
 @import url("Inter-UI");
-.menu-btn {
-  position: absolute;
-  z-index: 3;
-  right: 35px;
-  top: 35px;
-  cursor: pointer;
-  transition: all 500ms ease-in-out; }
-  .menu-btn .btn-line {
-    width: 28px;
-    height: 3px;
-    margin: 0 0 5px 0;
-    background: #ffffff;
-    transition: all 500ms ease-in-out; }
-  .menu-btn.close {
-    transform: rotate(180deg); }
-    .menu-btn.close .btn-line:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px); }
-    .menu-btn.close .btn-line:nth-child(2) {
-      opacity: 0; }
-    .menu-btn.close .btn-line:nth-child(3) {
-      transform: rotate(-45deg) translate(7px, -6px); }
-
-.menu {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  opacity: 0.9;
-  visibility: hidden; }
-  .menu.show {
-    visibility: visible; }
-  .menu-branding, .menu-nav {
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-    float: left;
-    width: 50%;
-    height: 100vh;
-    overflow: hidden; }
-  .menu-nav {
-    margin: 0;
-    padding: 0;
-    background: #373737;
-    list-style: none;
-    transform: translate3d(0, -100%, 0);
-    transition: all 500ms ease-in-out; }
-    .menu-nav.show {
-      transform: translate3d(0, 0, 0); }
-  .menu-branding {
-    background: #444;
-    transform: translate3d(0, 100%, 0);
-    transition: all 500ms ease-in-out; }
-    .menu-branding.show {
-      transform: translate3d(0, 0, 0); }
-    .menu-branding .portrait {
-      width: 250px;
-      height: 250px;
-      background: url("../img/portrait.jpg");
-      border-radius: 50%;
-      border: solid 3px #00a2ff; }
-  .menu .nav-item {
-    transform: translate3d(600px, 0, 0);
-    transition: all 500ms ease-in-out; }
-    .menu .nav-item.show {
-      transform: translate3d(0, 0, 0); }
-    .menu .nav-item.current > a {
-      color: #00a2ff; }
-  .menu .nav-link {
-    display: inline-block;
-    position: relative;
-    font-size: 25px;
-    text-transform: uppercase;
-    padding: 1rem 0;
-    font-weight: 300;
-    color: #ffffff;
-    text-decoration: none;
-    transition: all 500ms ease-in-out; }
-    .menu .nav-link:hover {
-      color: #00a2ff;
-      transform: scale(1.1); }
-
-.nav-item:nth-child(1) {
-  transition: 0.5s; }
-
-.nav-item:nth-child(2) {
-  transition: 1s; }
-
-.nav-item:nth-child(3) {
-  transition: 1.5s; }
-
-.nav-item:nth-child(4) {
-  transition: 2s; }
-
-.nav-item:nth-child(5) {
-  transition: 2.5s; }
-
 * {
   margin: 0;
   padding: 0;
@@ -288,10 +192,12 @@ header {
           opacity: 0;
           stroke: none;
           stroke-width: 0; }
-    .headerImage a[type="button"]:hover path:first-of-type {
-      opacity: 0; }
-    .headerImage a[type="button"]:hover path.icon--plain {
-      opacity: 1; }
+    .headerImage a[type="button"]:hover {
+      transition: all 500ms ease-in-out; }
+      .headerImage a[type="button"]:hover path:first-of-type {
+        opacity: 0; }
+      .headerImage a[type="button"]:hover path.icon--plain {
+        opacity: 1; }
 
 main {
   width: 90vw;
@@ -314,7 +220,8 @@ main {
     background: transparent;
     margin: 0; }
     main button.btn:hover {
-      background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%); }
+      background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+      transition: all 500ms ease-in-out; }
   main .threeCards {
     margin: 1.5rem auto auto 0;
     display: grid;
@@ -603,22 +510,85 @@ body#Услуги footer {
   margin: 60px 0 0 0; }
 
 @media screen and (max-width: 500px) {
-  h1 {
-    font-size: 20px; }
-  h2 {
-    font-size: 18px; }
-  h3 {
-    font-size: 16px; }
-  h4 {
-    font-size: 14px; }
+  .menu-btn {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 500ms ease-in-out; }
+    .menu-btn .btn-line {
+      width: 28px;
+      height: 3px;
+      margin: 0 0 5px 0;
+      background: black;
+      transition: all 500ms ease-in-out; }
+    .menu-btn.close {
+      transform: rotate(180deg); }
+      .menu-btn.close .btn-line:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px); }
+      .menu-btn.close .btn-line:nth-child(2) {
+        opacity: 0; }
+      .menu-btn.close .btn-line:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -6px); }
+  .menu {
+    z-index: 2;
+    top: 0px;
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden; }
+    .menu.show {
+      visibility: visible; }
+    .menu-nav {
+      display: block;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      float: none;
+      width: 100%;
+      height: 100vh;
+      overflow-x: hidden; }
+    .menu-nav {
+      margin: 0;
+      padding: 0;
+      background: #373737;
+      list-style: none;
+      transform: translate3d(0, -100%, 0);
+      transition: all 500ms ease-in-out; }
+    .menu .nav-item {
+      transform: translate3d(600px, 0, 0);
+      transition: all 500ms ease-in-out; }
+      .menu .nav-item.show {
+        transform: translate3d(0, 0, 0); }
+      .menu .nav-item.current > a {
+        color: #333; }
+    .menu .nav-link {
+      display: inline-block;
+      position: relative;
+      font-size: 16px;
+      text-transform: uppercase;
+      padding: 1rem 0;
+      font-weight: 300;
+      color: white;
+      text-decoration: none;
+      transition: all 500ms ease-in-out; }
+      .menu .nav-link:hover {
+        color: #333;
+        transform: scale(1.1); }
   .headerImage {
     display: block;
     justify-content: center;
     align-items: center;
     text-align: center; }
     .headerImage h1 {
-      padding-top: 15rem;
-      margin: 0 0 3rem 0;
+      padding-top: 14rem;
+      margin: 0 0 2rem 0;
       text-align: center;
       float: none;
       font-size: 48px; }
@@ -659,10 +629,31 @@ body#Услуги footer {
         opacity: 0; }
       .headerImage a[type="button"]:hover path.icon--plain {
         opacity: 1; }
+  main section.one .card {
+    min-width: 300px; }
+    main section.one .card p {
+      margin: 0 10px 0 28px; }
   main section.one h2 {
     font-size: 28px; }
   section.two h2 {
     font-size: 28px; }
+  .socials {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+    grid-gap: 15px;
+    justify-items: center;
+    text-align: center;
+    margin: 65px auto 0 auto;
+    justify-content: center; }
+    .socials .socialMedia {
+      margin: 1rem; }
+    .socials .roundedBorders {
+      font-size: 14px;
+      margin: 14px auto 0 auto;
+      padding: 7px 9px;
+      border: 1px solid #C4C4C4;
+      box-sizing: border-box;
+      border-radius: 30px; }
   section.three h2 {
     font-size: 28px; }
   footer {
