--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,8 +1,14 @@
 .menu-btn {
     position: absolute;
     z-index: 3;
-    right: 35px;
-    top: 35px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 16px;
     cursor: pointer;
     @include easeOut;
 
@@ -10,7 +16,7 @@
         width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background: set-text-color($primary-color);
+        background: black;
         @include easeOut;
     }
 
@@ -40,8 +46,8 @@
 
 // Menu Overlay
 .menu {
-    position: fixed;
-    top: 0;
+    z-index: 2;
+    top: 0px;
     width: 100%;
     opacity: 0.9;
     visibility: hidden;
@@ -50,16 +56,15 @@
         visibility: visible;
     }
 
-    &-branding,
     &-nav {
-        display: flex;
-        flex-flow: column wrap;
+        display: block;
+        text-align: center;
         align-items: center;
         justify-content: center;
-        float: left;
-        width: 50%;
+        float: none;
+        width: 100%;
         height: 100vh;
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     &-nav {
@@ -72,27 +77,7 @@
 
         &.show {
             // Slide in from top
-            transform: translate3d(0, 0, 0);
-        }
-    }
-
-    // Branding Side
-    &-branding {
-        background: $primary-color;
-        transform: translate3d(0, 100%, 0);
-        @include easeOut;
-
-        &.show {
-            // Slide in from bottom
-            transform: translate3d(0, 0, 0);
-        }
-
-        .portrait {
-            width: 250px;
-            height: 250px;
-            background: url("../img/portrait.jpg");
-            border-radius: 50%;
-            border: solid 3px $secondary-color;
+            // transform: translate3d(100, 100, 100);
         }
     }
 
@@ -113,11 +98,11 @@
     .nav-link {
         display: inline-block;
         position: relative;
-        font-size: 25px;
+        font-size: 16px;
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 300;
-        color: set-text-color($primary-color);
+        color: white;
         text-decoration: none;
         @include easeOut;
 
@@ -125,12 +110,5 @@
             color: $secondary-color;
             transform: scale(1.1);
         }
-    }
-}
-
-// Delay each nav item slide by a 0.1s delay
-@for $x from 1 through 5 {
-    .nav-item:nth-child(#{$x}) {
-        transition: $x * 0.5s;
     }
 }
