--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -5,22 +5,121 @@
 @include mediaMd {}
 
 @include mediaSm {
-    h1 {
-        font-size: 20px;
-    }
 
-    h2 {
-        font-size: 18px;
-    }
-
-    h3 {
+    .menu-btn {
+        position: absolute;
+        z-index: 3;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
         font-size: 16px;
+        cursor: pointer;
+        @include easeOut;
+
+        .btn-line {
+            width: 28px;
+            height: 3px;
+            margin: 0 0 5px 0;
+            background: black;
+            @include easeOut;
+        }
+
+        // rotate into x with menu lines
+        &.close {
+            transform: rotate(180deg);
+
+            .btn-line {
+
+                //Line 1 -rotate
+                &:nth-child(1) {
+                    transform: rotate(45deg) translate(5px, 5px);
+                }
+
+                //Line 2 -Hide
+                &:nth-child(2) {
+                    opacity: 0;
+                }
+
+                //Line 3 -rotate
+                &:nth-child(3) {
+                    transform: rotate(-45deg) translate(7px, -6px);
+                }
+            }
+        }
     }
 
-    h4 {
-        font-size: 14px;
-    }
+    // Menu Overlay
+    .menu {
+        z-index: 2;
+        top: 0px;
+        width: 100%;
+        opacity: 0.9;
+        visibility: hidden;
 
+        &.show {
+            visibility: visible;
+        }
+
+        &-nav {
+            display: block;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            float: none;
+            width: 100%;
+            height: 100vh;
+            overflow-x: hidden;
+        }
+
+        &-nav {
+            margin: 0;
+            padding: 0;
+            background: darken($primary-color, 5);
+            list-style: none;
+            transform: translate3d(0, -100%, 0);
+            @include easeOut;
+
+            &.show {
+                // Slide in from top
+                // transform: translate3d(100, 100, 100);
+            }
+        }
+
+        .nav-item {
+            transform: translate3d(600px, 0, 0);
+            @include easeOut;
+
+            &.show {
+                //slide from right
+                transform: translate3d(0, 0, 0);
+            }
+
+            &.current>a {
+                color: $secondary-color;
+            }
+        }
+
+        .nav-link {
+            display: inline-block;
+            position: relative;
+            font-size: 16px;
+            text-transform: uppercase;
+            padding: 1rem 0;
+            font-weight: 300;
+            color: white;
+            text-decoration: none;
+            @include easeOut;
+
+            &:hover {
+                color: $secondary-color;
+                transform: scale(1.1);
+            }
+        }
+    }
 
     .headerImage {
         display: block;
@@ -29,8 +128,8 @@
         text-align: center;
 
         h1 {
-            padding-top: 15rem;
-            margin: 0 0 3rem 0;
+            padding-top: 14rem;
+            margin: 0 0 2rem 0;
             text-align: center;
             float: none;
             font-size: 48px;
@@ -97,6 +196,15 @@
     main {
 
         section.one {
+
+            .card {
+                min-width: 300px;
+
+                p {
+                    margin: 0 10px 0 28px;
+                }
+            }
+
             h2 {
                 font-size: 28px;
             }
@@ -106,6 +214,30 @@
     section.two {
         h2 {
             font-size: 28px;
+        }
+    }
+
+    .socials {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+        grid-gap: 15px;
+        justify-items: center;
+        text-align: center;
+        margin: 65px auto 0 auto;
+        justify-content: center;
+
+        .socialMedia {
+            margin: 1rem;
+
+        }
+
+        .roundedBorders {
+            font-size: 14px;
+            margin: 14px auto 0 auto;
+            padding: 7px 9px;
+            border: 1px solid #C4C4C4;
+            box-sizing: border-box;
+            border-radius: 30px;
         }
     }
 
